# booking-management-system

./: .dockerignore  .gitignore  Backend-1768890237161.json  DOCKER_SETUP.md  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose-prod.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  main.py  package-lock.json  package.json  prometheus.yml  pyproject.toml  ТЗ.md
.github/workflows/: ci.yaml  ci.yml  deploy-monitoring.yml  deploy-prod.yml
app/: app.py  depends.py  log.py
app/api/routes/: __init__.py  ping.py
app/api/routes/bookings/: README.md  __init__.py  schema.py
app/api/routes/feedback/: __init__.py  readme.md  schema.py
app/api/routes/resource/: __init__.py  create.py  delete.py  free_slots.py  read.py  schema.py  update.py
app/api/routes/room/: __init__.py  create.py  delete.py  read.py  schema.py  update.py
app/api/routes/telegram/: __init__.py
app/bot/: booking_store.py  bookings.py  manager.py
app/bot/fsm/: booking.py  booking_states.py
app/bot/handlers/: booking.py  my_booking.py  reviews.py  settings.py  start.py
app/bot/keyboards/: __init__.py  button_handler.py  main_menu.py
app/bot/middlewares/: __init__.py  database.py  logging.py  metrics.py  user.py
app/bot/routes/: __init__.py  booking.py  bookings.py  button_handler.py  create.py  echo.py  helpers.py  list.py  main_menu.py  my_booking.py  navigation.py  ping.py  reviews.py  start.py
app/config/: __init__.py  bot.py
app/domain/services/: __init__.py
app/infrastructure/: celery_app.py
app/infrastructure/database/: __init__.py
app/metrics/: __init__.py  business.py
app/notification/: scheduler.py
app/notifications/: config.py  manager.py  messages.py  models.py  scheduler.py  service.py
app/scheduler/: scheduler.py
app/schedulers/: scheduler.py
bot/: __init__.py  handler.py
bot/filters/: __init__.py  chat_type.py
bot/keyboards/: __init__.py
bot/routes/: echo.py  ping.py
bot/routes/admin/: __init__.py
frontend/: .gitignore  index.html  package.json  readmeServer.md  server.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/booking-managment-system/: index.html  package-lock.json  package.json  vite.config.ts
frontend/booking-managment-system/src/: App.tsx  main.tsx
frontend/src/: App.tsx  main.tsx
frontend/src/.firebase/: hosting.ZGlzdA.cache
frontend/src/API/: axiosInstance.ts  bookings.ts
frontend/src/components/: BookingsList.tsx
frontend/src/hooks/: useBookings.ts
frontend/src/styles/: App.css  description.md
frontend/src/types/: bookingContext.tsx  telegram.d.ts
loki/: docker-compose.yaml
monitoring/: docker-compose.monitoring.yaml
monitoring/alertmanager/: alertmanager.yaml
monitoring/alertserver/: Dockerfile  __init__.py  telegram_alert.py
monitoring/loki/: loki-config.yaml
monitoring/prometheus/: alerts.yaml  prometheus.yaml
(+107 files in other folders)
