[project]
name = "booking-management-system"
version = "0.1.0"
description = "Сервис для бронирования ресурсов (переговорные комнаты, оборудование) с Telegram-ботом, уведомлениями и системой обратной связи."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "prometheus-client>=0.24.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "tzdata>=2025.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
  "A",      # flake8-builtins
  "ARG",    # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "COM",    # flake8-commas
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle errors
  "EM",     # flake8-errmsg
  "ERA",    # eradicate
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INP",    # flake8-no-pep420
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "N",      # pep8-naming
  "PD",     # pandas-vet
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint (через ruff-pylint)
  "PT",     # flake8-pytest-style
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # ruff-specific rules
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLF",    # private member access
  "T",      # flake8-debugger
  "TCH",    # flake8-type-checking
  "TD",     # flake8-todos
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # yesqa
]


[tool.ruff.lint.isort]
known-first-party = []
combine-as-imports = true
force-single-line = false
force-sort-within-sections = true
force-wrap-aliases = true
order-by-type = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # неиспользуемый импорт разрешен в __init__.py
"tests/**/*.py" = [
  "S101",    # assert в тестах разрешен
  "PT001",   # названия фикстур
  "PT002",   # docstring в фикстурах
  "PT003",   # названия тестов
]

"alembic/**/*.py" = ["ALL"]  # игнорировать все в миграциях
"**/alembic/*.py" = ["ALL"]  # альтернативный паттерн
